syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "esperer.lib";
option java_outer_classname = "UserProto";

service UserQueryService {
  rpc getUserInfo (google.protobuf.Int64Value) returns (UserResponse) {
  }
}

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
}